<resources>
    <string name="app_name">Gigih Module</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="save">save</string>
    <string name="input_value">Input Value</string>
    <string name="input_key">Input Key</string>
    <string name="read">read</string>
    <string name="result">this is a string</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="instructions">Instructions</string>
    <string name="word_count">%d of %d words</string>
    <string name="score">Score: %d</string>
    <string name="your_score">Your scored: %d</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="try_again">Try Again!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">You scored: %d</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="hint_word">Word...</string>
    <string name="empty_not_saved">Empty not saved!</string>
</resources>