<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sharedpreference.PreferencesActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_margin="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_save_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_key"
        android:layout_below="@id/switch_mode"
        android:layout_margin="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_save_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_value"
        android:layout_below="@id/et_save_key"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/et_save_value"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/btn_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read"
        android:layout_below="@id/et_save_value"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_save"
        android:text="@string/result"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>